--- a/deployment/nginx-conf/nginx/nginx.conf
+++ b/deployment/nginx-conf/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
 	server_tokens off;
     gzip  on;
 	gzip_disable "msie6";
-	client_max_body_size 500M;
+	client_max_body_size "500M";
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
     ssl_prefer_server_ciphers on;
 
